# MarkerPredict

./: README.md  SHAP.ipynb  SHAP_AlphaFold.ipynb  SHAP_DisProt.ipynb  SHAP_IUPred.ipynb  SHAP_all_nodes.ipynb  all_pairs.csv  correlations.ipynb  hyperparameter_fit.ipynb  network_cross_training.ipynb  network_cross_training_AlphaFold.ipynb  network_cross_training_DisProt.ipynb  network_cross_training_IUPred.ipynb  network_cross_training_only_topology.ipynb  network_cross_training_only_topology_AlphaFold.ipynb  network_cross_training_only_topology_DisProt.ipynb  network_cross_training_only_topology_IUPred.ipynb  predictive_biomarker_ML_70_30.ipynb  predictive_biomarker_ML_70_30_AlphaFold.ipynb  predictive_biomarker_ML_70_30_DisProt.ipynb  predictive_biomarker_ML_70_30_IUPred.ipynb  predictive_biomarker_ML_LOOCV.ipynb  predictive_biomarker_ML_LOOCV_AlphaFold.ipynb  predictive_biomarker_ML_LOOCV_DisProt.ipynb  predictive_biomarker_ML_LOOCV_IUPred.ipynb  predictive_biomarker_final_classification.ipynb  predictive_biomarker_final_classification_AlphaFold.ipynb  predictive_biomarker_final_classification_DisProt.ipynb  predictive_biomarker_final_classification_IUPred.ipynb  pyproject.toml  separating_factors.ipynb  training.csv  training_all_neighbours.csv  unknown.csv  unknown_all_neighbours.csv
