[tool.poetry]
name = "training_ml"
version = "0.1.0"
description = ""
authors = ["Klara Schulc <rako.klari@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.1"
xgboost = "^1.7.3"
graphviz = "^0.20.1"
seaborn = "^0.12.2"
requests = "^2.28.2"
torch = "^1.13.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
